# CFDGinkgo

./: CMakeLists.txt  README.md
.cache/clangd/index/: demo-heat-equation-test.cpp.5D0BDA6462935482.idx  demo-heat-equation.cpp.F1C7F642A146FF12.idx  demo-poisson-solver-test.cpp.6DD62EF31A34F031.idx  demo-poisson-solver.cpp.BD739F597C3E8413.idx  linear-convection-1D-test.cpp.0CA8AF7322C7A848.idx  linear-convection-1D.cpp.1342DF7009EA0050.idx
.github/workflows/: ci.yml
cmake/: SetupDependency.cmake  SetupTests.cmake
tutorials/: CMakeLists.txt
tutorials/demo-heat-equation/: CMakeLists.txt  demo-heat-equation.cpp
tutorials/demo-heat-equation/data/: gko_text_2d.mtx
tutorials/demo-poisson-solver/: CMakeLists.txt
tutorials/step01-linear-convection-1D/: CMakeLists.txt  linear-convection-1D.cpp
